--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
       name="description"
       content="MiniMate Toy Australian Shepherd"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="icon" href="./gfx/favicon-16x16.png" sizes="16x16" type="image/png" />
+    <link rel="icon" href="./gfx/favicon-32x32.png" sizes="32x32" type="image/png" />
+    <link rel="icon" href="./gfx/favicon-48x48.png" sizes="48x48" type="image/png" />
+    <meta name="robots" content="index, follow">
     <title>MiniMate - Australian Shepherd</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
