--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="MiniMate Toy Australian Shepherd"
-    />
-    <link rel="icon" href="./gfx/favicon-16x16.png" sizes="16x16" type="image/png" />
-    <link rel="icon" href="./gfx/favicon-32x32.png" sizes="32x32" type="image/png" />
-    <link rel="icon" href="./gfx/favicon-48x48.png" sizes="48x48" type="image/png" />
-    <meta name="robots" content="index, follow">
-    <title>MiniMate - Australian Shepherd</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&family=Lora:wght@500;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="MiniMate Toy Australian Shepherd" />
+  <meta name="robots" content="index, follow">
+  <link rel="icon" href="./gfx/favicon-16x16.png" sizes="16x16" type="image/png" />
+  <link rel="icon" href="./gfx/favicon-32x32.png" sizes="32x32" type="image/png" />
+  <link rel="icon" href="./gfx/favicon-48x48.png" sizes="48x48" type="image/png" />
+  <link rel="canonical" href="https://minimate.thecoldwell.de/" />
+  <title>MiniMate - Toy Australian Shepherd</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&family=Lora:wght@500;700&display=swap"
+    rel="stylesheet">
+
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
