--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,19 @@
   <meta property="og:url" content="https://minimate.thecoldwell.de/">
   <meta property="og:title" content="MiniMate - Toy Australian Shepherd Zucht">
   <meta property="og:description" content="Willkommen bei MiniMate, Ihrer Toy Australian Shepherd Zucht. Entdecken Sie unsere liebevollen Hunde, Welpen und erfahren Sie mehr über unsere Zuchtphilosophie.">
-  <meta property="og:image" content="https://minimate.thecoldwell.de/gfx/hero.jpg">
+  <meta property="og:image" content="https://minimate.thecoldwell.de/gfx/social.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1512">
+  <meta property="og:image:height" content="1312">
+  <meta property="og:image:alt" content="MiniMate - Toy Australian Shepherd Zucht">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://minimate.thecoldwell.de/">
   <meta property="twitter:title" content="MiniMate - Toy Australian Shepherd Zucht">
   <meta property="twitter:description" content="Willkommen bei MiniMate, Ihrer Toy Australian Shepherd Zucht. Entdecken Sie unsere liebevollen Hunde, Welpen und erfahren Sie mehr über unsere Zuchtphilosophie.">
-  <meta property="twitter:image" content="https://minimate.thecoldwell.de/gfx/hero.jpg">
+  <meta property="twitter:image" content="https://minimate.thecoldwell.de/gfx/social.png">
+  <meta property="twitter:image:alt" content="MiniMate - Toy Australian Shepherd Zucht">
 
   <!-- Favicon -->
   <link rel="icon" href="./gfx/favicon-16x16.png" sizes="16x16" type="image/png" />
